# CEnv

./: CMakeLists.txt  README.md
include/: cenv.h
src/: .env  cenv.c
