cmake_minimum_required(VERSION 3.10)
project("CENV" LANGUAGES C)
file(GLOB SRCFILES src/*.c)
add_library(cenvStatic STATIC ${SRCFILES})
add_library(cenv SHARED ${SRCFILES})
target_include_directories(cenv PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(cenvStatic PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
